--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 
 <!--  <link href="lib/ionic/css/ionic.css" rel="stylesheet">-->
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above    -->
-    <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/ionic.app.min.css" rel="stylesheet">
     <!-- build:css css/all.css -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -58,7 +58,6 @@
 <!-- cordova script (this will be a 404 during development) -->
 <script src="cordova.js"></script>
 
-<!-- your app's js -->
 <!-- build:js js/all.js -->
 <!-- your app's js -->
 <script src="js/ionic-native-transitions.min.js"></script>
