--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-light">
+    <ion-nav-bar class="bar-light" scroll-top  ng-click="scrollTop()" >
 <!--      <ion-nav-back-button>
       </ion-nav-back-button>-->
     </ion-nav-bar>
