--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above    -->
     <link href="css/ionic.app.min.css" rel="stylesheet">
     <!-- build:css css/all.css -->
-    <link href="css/iconfont.css" rel="stylesheet">
+    <link href="fonts/iconfont.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/account.css" rel="stylesheet">
